// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with errors 1`] = `
<div
  className="govuk-form-group govuk-form-group--error"
>
  <label
    className="govuk-label"
    htmlFor="postcodeCustom"
  >
    Enter your postcode
  </label>
  <span
    className="govuk-error-message"
    id="postcodeError"
  >
    <span
      className="govuk-visually-hidden"
    >
      Error:
    </span>
    this is a test
  </span>
  <span
    className="govuk-hint"
    id="postcode-hint"
  >
    For example, SW1A 1AA
  </span>
  <input
    className="govuk-input govuk-input--width-10"
    id="postcodeCustom"
    name="postcode"
    noValidate={true}
    onChange={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`renders correctly without props passed in 1`] = `
<div
  className="govuk-form-group "
>
  <label
    className="govuk-label"
    htmlFor="postcodeCustom"
  >
    Enter your postcode
  </label>
  <span
    className="govuk-hint"
    id="postcode-hint"
  >
    For example, SW1A 1AA
  </span>
  <input
    className="govuk-input govuk-input--width-10"
    id="postcodeCustom"
    name="postcode"
    noValidate={true}
    onChange={[Function]}
    type="text"
    value=""
  />
</div>
`;
